いろいろ更新

--- a/components/about-02/index.html
+++ b/components/about-02/index.html
@@ -7,6 +7,8 @@
     <title>会社案内</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../shared/base.css">
+    <link rel="stylesheet" href="../../shared/animations-io.css">
+    <script src="script.js"></script>
 </head>
 
 <body class="container">
@@ -24,9 +26,9 @@
 
         <!-- 画像群 -->
         <div class="about__imgs">
-            <img src="../../assets/sample-01.webp" class="img-1">
-            <img src="../../assets/sample-02.webp" class="img-2">
-            <img src="../../assets/sample-03.webp" class="img-3">
+            <img src="../../assets/sample-01.webp" class="img-1 fadein">
+            <img src="../../assets/sample-02.webp" class="img-2 fadein">
+            <img src="../../assets/sample-03.webp" class="img-3 fadein">
         </div>
         <!-- /画像群 -->
     </section>
