--- a/components/about-02/style.css
+++ b/components/about-02/style.css
@@ -34,12 +34,14 @@
   left: 50%; /* 左からの位置 */
   width: 50%; /* 画像の幅 */
   aspect-ratio: 3 / 4; /* アスペクト比を指定 */
+  transition-delay: 300ms; /* 遅延時間 */
 }
 .img-3 {
   top: 60%; /* 上からの位置 */
   left: 10%; /* 左からの位置 */
   width: 60%; /* 画像の幅 */
   aspect-ratio: 16 / 9; /* アスペクト比を指定 */
+  transition-delay: 600ms; /* 遅延時間 */
 }
 /* --- /会社案内 --- */
 
