--- a/shared/animations-io.css
+++ b/shared/animations-io.css
@@ -3,7 +3,9 @@
 .fadein {
   opacity: 0;
   transform: translateY(30px); /* 30px 下に隠す */
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  /*transition: opacity 1s ease-out, transform 1s ease-out;*/
+  transition-property: opacity, transform;
+  transition-duration: 1s, 1s;
 }
 .fadein.show {
   opacity: 1;
