--- a/components/about-02/index.html
+++ b/components/about-02/index.html
@@ -7,7 +7,7 @@
     <title>会社案内</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../shared/base.css">
-    <link rel="stylesheet" href="../../shared/animations-io.css">
+    <link rel="stylesheet" href="../../shared/animations.css">
     <script src="script.js"></script>
 </head>
 
