--- a/shared/layout.css
+++ b/shared/layout.css
@@ -1,4 +1,3 @@
-/* ---------- レイアウト ---------- */
 /* 汎用ブロック */
 .media-block {
   position: relative;
@@ -24,4 +23,7 @@
   margin-right: calc(50% - 50vw); /* 右を画面幅いっぱいに広げる */
   margin-left: calc(50% - 50vw); /* 左を画面幅いっぱいに広げる */
 }
-/* ---------- レイアウト END ---------- */
+
+/* スマホ用：画面幅768px以下の処理 */
+@media (max-width: 767px) {
+}
