--- a/components/heading/style.css
+++ b/components/heading/style.css
@@ -13,3 +13,12 @@
   font-size: 1rem; /* フォントサイズ */
 }
 /* --- /見出し01 --- */
+
+/* --- 小見出し（背景あり） --- */
+.heading-s {
+  font-size: 1.2rem !important;
+  padding: 1rem !important;
+  background-color: #8fe04f;
+  border-radius: 5px;
+}
+/* --- 小見出し（背景あり） --- */
