--- a/shared/animations.css
+++ b/shared/animations.css
@@ -1,37 +1,33 @@
-/* ---------- アニメーション ---------- */
-/*ホバー時に拡大するアニメーション*/
-.hover-zoom {
-  transition: transform 0.6s ease; /* 0.6秒で変化 */
+/* ---------- アニメーション（IOあり） ---------- */
+/* フェードイン */
+.fadein {
+  opacity: 0;
+  transform: translateY(30px); /* 30px 下に隠す */
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  /* transition-property: opacity, transform;
+  transition-duration: 1s, 1s; */
+}
+.fadein.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 
-.hover-zoom:hover {
-  transform: scale(1.05); /* 1.05倍に拡大 */
+/* ぷくっとふくらむ */
+.expand {
+  transform: scale(0);
+  transition: transform 0.5s ease-out;
+}
+.expand.show {
+  transform: scale(1); /* 元の大きさ */
 }
 
-/* 背景を拡大するアニメーション */
-.zoom-bg {
-  position: relative;
-  overflow: hidden;
+/* スライドイン（左から） */
+.slidein-l {
+  clip-path: inset(0 100% 0 0);
+  transition: clip-path 0.8s ease-out;
+}
+.slidein-l.show {
+  clip-path: inset(0);
 }
 
-.zoom-bg::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url(https://morld02.sakura.ne.jp/kres/wp-content/uploads/2025/04/kres-bnr-point-bg-3.jpg)
-    center / cover no-repeat; /*背景画像のURLを指定*/
-  transition: transform 0.6s ease; /* 0.6秒で変化 */
-}
-
-.zoom-bg:hover::before {
-  transform: scale(1.05); /* 1.05倍に拡大 */
-}
-
-.zoom-bg-content {
-  position: relative;
-  z-index: 1; /* コンテンツを前面に表示 */
-}
-/* ---------- アニメーション END ---------- */
+/* ---------- アニメーション（IOあり） END ---------- */
